# CCIOTLabs

./: .gitignore  .~lock.testPic.pptx#  CMakeLists.txt  README copy.md  README.md  build.sh  commit.sh  commit_info  config.sh  debug.sh  flash.sh  sdkconfig  sdkconfig.default  sdkconfig.default_old  sdkconfig.old  testPic.pptx
.metals/: metals.mv.db
components/EspCamera/: com_scripts  commit
components/EspCamera/examples/: flash.sh  sdkconfig
components/EspCamera/examples/main/: CMakeLists.txt  take_picture.c
components/EspCamera/examples/main/lcd/: lcd.c  lcd.h  tftfont.h
components/EspCamera/examples/main/wifi/: wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  aws.c  demo_config.h  ds18b20.c  ds18b20.h  station_main.c  take_picture.c  wifi_enterprise_main.c  wpa2_enterprise_main.c
main/aws/: imageQuery.py  s3CORS  s3Policy  signedURL.py
main/aws_help/: thingPolicy
main/certs/: client.crt  client.key  root_cert_auth.crt
python/: pySend.py
